reset button player names

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <ul id="squares">
 </ul>
 <h2 id="result"></h2>
-<h3 id="p1score"></h3>
-<h3 id="p2score"></h3>
+<h3 id="p1score">P1:</h3>
+<h3 id="p2score">P2:</h3>
+<button onclick="reset()">Reset</button>
 <script src="index.js"></script>
 </body>
 </html>
