--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
     <h2 id="result">Ready!</h2>
     <h3 id="turn"></h3>
 </div>
-
 <div class="game-container">
     <ul class="center" id="squares">
     </ul>
 </div>
-
-<div class="scoreboard">
-    <h2 id="scoreboard-title">Tally Sheet</h2>
+<div class="tally">
+    <h2 id="tally-title">Tally Sheet</h2>
     <div class="tally-container">
         <table class="tally-table">
             <tr class="tally-row">
@@ -38,11 +36,9 @@
         </table>
     </div>
 </div>
-
 <div class="button-container">
     <button class="clear-board" onclick="reset()">Reset Board</button>
 </div>
-
 <script src="index.js"></script>
 </body>
 </html>
